test/libsolidity/syntaxTests/constructor/two_constructors.sol
contract test {
	constructor(uint) public { }
	constructor() public {}
}
// ----
// DeclarationError 7997: (47-70): More than one constructor defined.
